--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a href="post.html">Contenu</a>
                     </li>
                     <li>
-                        <a href="contact.html">Veille</a>
+                        <a href="contact.html">Soucres & Recommendation</a>
                     </li>
                 </ul>
             </div>
