--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - About</title>
+    <title>IoT création de valeur & applications</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,7 +58,7 @@
                         <a href="post.html">Contenu</a>
                     </li>
                     <li>
-                        <a href="contact.html">Sources</a>
+                        <a href="contact.html">Soucres & Recommendation</a>
                     </li>
                 </ul>
             </div>
