--- a/post.html
+++ b/post.html
@@ -323,6 +323,10 @@ Gestion des places de parking et du trafic par comptage vidéo personnes-véhicu
 </ul>
 <h2 class="section-heading">Conclusion</h2>
 <p>Les développements IoT ne vont pas ralentir rapidement, mais plus une organisation développe et met en œuvre une stratégie rapidement, plus son avenir sera pérennisé.
+<br>et donc les sociétés doivent bien exploité le marché en évitant les approche classique et en changeant la façon de penser pour créer de la valeur
+   ,Il faut penser orienté service, se mettre à la place des clients et créer de nouveau besoins pour pouvoir réussir.
+
+
 </p>
 
 
